@@ -21,6 +21,7 @@
 - init qdn before use in get_query_dn().
 - fix typo in update_hosts_mounts().
 - make negative cache update consistent for all lookup modules.
+- ensure negative cache isn't updated on remount.
 
 28/03/2014 autofs-5.0.9
 =======================
